--- a/client/src/features/creator/ToolsPanel.module.css
+++ b/client/src/features/creator/ToolsPanel.module.css
@@ -2,4 +2,11 @@
     background-color: silver;
     width: 100%;
     height: 100%;
+}
+
+.draggable {
+    background-color: red;
+    width: 75px;
+    height: 55px;
+    cursor: pointer;
 } 
