--- a/client/src/features/creator/CreatorLayout.module.css
+++ b/client/src/features/creator/CreatorLayout.module.css
@@ -1,6 +1,6 @@
 .container {
     display: flex;
-    justify-content: space-between;
+    flex-direction: column;
     max-width: 85rem;
     width: 100%;
     height: 100%;
