--- a/client/src/features/creator/DropzoneBlock.module.css
+++ b/client/src/features/creator/DropzoneBlock.module.css
@@ -1,12 +1,6 @@
 .block {
     width: 100%;
     height: 100%;
-    border: 0.5px solid black;
+    border: 0.1px dashed black;
+    background-color: transparent;
 }
-
-.renderedItem {
-    background-color: red;
-    width: 75px;
-    height: 55px;
-    cursor: pointer;
-} 
