--- a/client/src/features/creator/itemsToolbox/Toolbox.module.css
+++ b/client/src/features/creator/itemsToolbox/Toolbox.module.css
@@ -1,7 +1,7 @@
 .toolbox {
     display: flex;
     width: 100%;
-    height: 15rem;
+    height: 17rem;
     padding: 1rem;
-    background-color: beige;
+    background-color: white;
 }
