--- a/client/src/features/creator/draggable/Draggable.module.css
+++ b/client/src/features/creator/draggable/Draggable.module.css
@@ -1,8 +1,12 @@
 .img {
     border-radius: 50%;
     cursor: pointer;
+    position: relative;
+    z-index: 50;
 } 
 
 text {
     text-align: left;
+    position: relative;
+    z-index: 50;
 }
